# x-change

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REVIEW-REPORT.md  pyproject.toml  pyrightconfig.json  report-v0.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
data/: evidence_ledger_sample.csv  reward_ledger_summary.csv  token_log_sample.csv
docs/: CONSOLIDATION-ROLLBACK-NOTES.md  INTEGRATION-SPIKE.md  VIEWER-SMOKE-CHECK.md  anthropic-financial-services-integration.md  circuit-close-runbook.md  circuit-close-witness-handoff.md  consolidation-registry.yaml  finance-agents-modernization.md  glass-contract-v0.md  glass-xchange-fsi-release-audit.md  mcp-server.md  opencode-harvest-summary.md  policy-core-v0.md  scope-integration.md  stripe-boundary.md  token-scope.md  tool-scope.md  useb-agent-brief.md  useb-api-contract.md  useb-runbook.md  viewer-smoke-check-main.html  viewer-smoke-check-main.json
proofs/: circuit-close-proof.json  circuit-close-proof.md  opencode-harvest-2026-05-07.json  useb-proof.json  useb-proof.md  viewer-v1.1-operator-proof.json
scripts/: bootstrap-financial-services-ref.sh  evidence-security-audit.sql  export_calculator_data.py  glass-session-init.sh  smoke-check-viewer.sh  stripe_ledger_verify.py  useb_bundle.py  useb_submit.py  validate_memory_authority.py  weekly-maintenance.sh
tests/: test_ack_api.py  test_domain.py  test_entrypoint.py  test_evidence_patch.py  test_glass_adapter.py  test_grid_substantiation.py  test_http_boundaries.py  test_http_gap.py  test_main_utils.py  test_mcp_read.py  test_nudge.py  test_scope.py  (+14 more)
(+112 files in other folders)
