[project]
name = "xchange"
version = "0.1.0"
description = "x-change v0 principled reward core"
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
mcp = [
    "mcp>=1.10",
]
server = [
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.30.3",
]
